--- a/2.2.1_Operadores/index.html
+++ b/2.2.1_Operadores/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Operadores</h1>
-    <script src="operadoresLogicos.js"></script>
+    <script src="valoresTruthyFalsy.js"></script>
 </body>
 </html>
