--- a/2.2.2_Funciones/index.html
+++ b/2.2.2_Funciones/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Funciones</h1>
-    <script src="funciones.js"></script>
+    <script src="scope.js"></script>
 </body>
 </html>
