--- a/2.3.2_DOM/index.html
+++ b/2.3.2_DOM/index.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: blue;" id="miTitulo">DOM</h1>
-    <h1 style="color: blue;" id="otroTitulo">OTRO TITULO</h1>
+    <!-- Etiquetas de ejemplo de teoría vistas en clase -->
+    <!-- <h1 style="color: blue;" id="miTitulo">DOM</h1> -->
+    <!-- <h1 style="color: blue;" id="otroTitulo">OTRO TITULO</h1> -->
+    <h1>Lista de Tareas</h1>
+
+    <div>
+        <input type="text" id="tareaInput" placeholder="Nueva tarea">
+        <button onclick="agregarTarea()">Agregar</button>
+    </div>
+
+    <ul id="listaTareas">
+        
+        <!-- AQUI VAN MIS TAREAS -->
+        <!-- li Tarea /li -->
+    </ul>
+
     <script src="script.js"></script>
 </body>
 </html>
